--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <body>
         <header class="header">
             <div class="container" style="display: flex;">
-            <nav class="page-navigation">
-            <a href="index.html" class="logo-header"><span class="web-logo">Web</span>Studio</a>
-            <ul class="navigation-list">
-                <li class="navigation-list-item"><a href="index.html" class="navigation-links current">Студия</a></li>
-                <li class="navigation-list-item"><a href="portfolio.html" class="navigation-links">Портфолио</a></li>
-                <li class="navigation-list-item"><a href="cotacts.html" class="navigation-links">Контакты</a></li>
+            <nav class="navigation">
+            <a href="index.html" class="logo"><span class="logo__web-logo">Web</span>Studio</a>
+            <ul class="navigation__list">
+                <li class="navigation__list-item"><a href="index.html" class="navigation__links hover-focus current">Студия</a></li>
+                <li class="navigation__list-item"><a href="portfolio.html" class="navigation__links hover-focus">Портфолио</a></li>
+                <li class="navigation__list-item"><a href="cotacts.html" class="navigation__links hover-focus">Контакты</a></li>
             </ul>
             </nav>
         <div class="header-contacts">
-            <a href="mailto:info@devstudio.com" class="mail">
-            <svg class="header-icon" width="16" height="12">
+            <a href="mailto:info@devstudio.com" class="header-contacts__mail hover-focus">
+            <svg class="header-contacts__icon" width="16" height="12">
             <use href="./images/header-sprite.svg#icon-envelope" width="16" height="12" ></use>
             </svg>info@devstudio.com</a>
-            <a href="tel:+380961111111" class="phone-number">
-            <svg class="header-icon" width="10" height="16">
+            <a href="tel:+380961111111" class="phone-number hover-focus">
+            <svg class="header-contacts__icon" width="10" height="16">
             <use href="./images/header-sprite.svg#icon-smartphone"></use>
             </svg>+380961111111</a>
         </div></div>
@@ -36,8 +36,8 @@
         <main>
             <section class="banner-section">
                 <div class="container">
-                    <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
-                    <button type="button" class="make-an-order" data-modal-open >Заказать услугу</button>
+                    <h1 class="banner-section__heading">Эффективные решения для вашего бизнеса</h1>
+                    <button type="button" class="banner-section__button button-styles" data-modal-open >Заказать услугу</button>
                 </div>
             </section>
             <section class="our-qualities-section">
@@ -242,7 +242,7 @@
             <div class="container">
                 <div class="footer-flex-box">
                 <div class="information-footer-block">
-            <a href="index.html" class="logo-footer"><span class="web-logo">Web</span>Studio</a>
+            <a href="index.html" class="logo-footer logo"><span class="logo__web-logo">Web</span>Studio</a>
             <address class="footer-info">
                 <p class="address-footer">г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="footer-list">
@@ -335,14 +335,17 @@
                         <textarea class="your-comments" name="comments" rows="7" placeholder="Введите текст"></textarea>
                     </label></li>
                     </ul>
-                    <div class="modal-checkbox-block">
-                    <svg class="icon-check" width="16" height="15"><use href="./images/form-sprite.svg#icon-check"></use></svg>
-                    <input type="checkbox" name="checkbox" class="hidden-checkox visually-hidden" id="checkbox" autofocus>
-                    <label for="checkbox"><p>Соглашаюсь с рассылкой и принимаю <a href="" class="agreement-condition-link">Условия договора</a></p></label>
-                </div>
+                    <div class="checkbox-block">
+                    <label class="check">
+                            <input type="checkbox" name="checkbox" class="check__input visually-hidden" autofocus checked required>
+                            <span class="custom-checkbox"><svg class="check__icon-check" width="16" height="15">
+                                <use href="./images/form-sprite.svg#icon-check"></use>
+                            </svg>
+                    <span class="checkbox"></span></span>
+                   <p class="check__text">Соглашаюсь с рассылкой и принимаю <a href="" class="check__agreemnet-link">Условия договора</a></p></label></div>
                 <div class="modal-button-flex"><input type="button" value="Отправить" name="submit" class="modal-button"></div>
                 </form>
-            </div>
+                </div>
             </div>
         </div>
         <script src="./js/modal.js"></script>
