--- a/portfolio.html
+++ b/portfolio.html
@@ -14,21 +14,26 @@
 <body>
     <header class="header">
         <div class="container" style="display: flex;">
-            <nav class="page-navigation">
-                <a href="index.html" class="logo-header"><span class="web-logo">Web</span>Studio</a>
-                <ul class="navigation-list">
-                    <li class="navigation-list-item"><a href="index.html" class="navigation-links">Студия</a></li>
-                    <li class="navigation-list-item"><a href="portfolio.html" class="navigation-links current">Портфолио</a></li>
-                    <li class="navigation-list-item"><a href="cotacts.html" class="navigation-links">Контакты</a></li>
+            <nav class="navigation">
+                <a href="index.html" class="logo"><span class="logo__web-logo">Web</span>Studio</a>
+                <ul class="navigation__list">
+                    <li class="navigation__list-item"><a href="index.html"
+                            class="navigation__links hover-focus">Студия</a></li>
+                    <li class="navigation__list-item"><a href="portfolio.html"
+                            class="navigation__links hover-focus current">Портфолио</a></li>
+                    <li class="navigation__list-item"><a href="cotacts.html"
+                            class="navigation__links hover-focus">Контакты</a></li>
                 </ul>
             </nav>
             <div class="header-contacts">
-                <a href="mailto:info@devstudio.com" class="mail"><svg class="header-icon" width="16" height="12">
-                    <use href="./images/header-sprite.svg#icon-envelope"></use>
-                </svg>info@devstudio.com</a>
-                <a href="tel:+380961111111" class="phone-number"><svg class="header-icon" width="10" height="16">
-                    <use href="./images/header-sprite.svg#icon-smartphone"></use>
-                </svg>+380961111111</a>
+                <a href="mailto:info@devstudio.com" class="header-contacts__mail hover-focus">
+                    <svg class="header-contacts__icon" width="16" height="12">
+                        <use href="./images/header-sprite.svg#icon-envelope" width="16" height="12"></use>
+                    </svg>info@devstudio.com</a>
+                <a href="tel:+380961111111" class="phone-number hover-focus">
+                    <svg class="header-contacts__icon" width="10" height="16">
+                        <use href="./images/header-sprite.svg#icon-smartphone"></use>
+                    </svg>+380961111111</a>
             </div>
         </div>
     </header>
@@ -100,7 +105,7 @@
         <div class="container">
             <div class="footer-flex-box">
                 <div class="information-footer-block">
-                    <a href="index.html" class="logo-footer"><span class="web-logo">Web</span>Studio</a>
+                    <a href="index.html" class="logo-footer logo"><span class="logo__web-logo">Web</span>Studio</a>
                     <address class="footer-info">
                         <p class="address-footer">г. Киев, пр-т Леси Украинки, 26</p>
                         <ul class="footer-list">
@@ -145,7 +150,8 @@
                     <div class="subscribe-footer-form">
                         <form>
                             <label>
-                                <input class="subscribe-on-mailing" name="subscribe-on-mailing" placeholder="E-mail" type="email">
+                                <input class="subscribe-on-mailing" name="subscribe-on-mailing" placeholder="E-mail"
+                                    type="email">
                             </label>
                         </form>
                         <button class="subscribe" type="button">
